k8s/default-http-backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: default-http-backend
  name: default-http-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: default-http-backend
