k8s/guestbook.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: guestbook
  name: guestbook
spec:
  ports:
    - nodePort: 30959
      port: 8080
      targetPort: 8080
  selector:
    name: guestbook
  type: NodePort
