k8s/hello-world.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-world
  name: hello-world
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    name: hello-world
  type: NodePort
