k8s/mongodb-1.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-1
spec:
  ports:
    - port: 27017
      targetPort: 27017
      name: mongodb
  selector:
    name: mongodb-1
  type: ClusterIP
g
