k8s/server-minefield.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: server-minefield
  name: server-minefield
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: server-minefield
  type: NodePort
